FIX: minor thread changes on mobile
- do not render sidepanel resizer as it's not usable on mobile
- removes 1px to the bottom spacing, this spacing won't be necessary once we implement chat-replying-indicator for thread

--- a/plugins/chat/assets/stylesheets/common/chat-thread.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-thread.scss
@@ -29,6 +29,6 @@
   }
 
   .chat-composer__wrapper {
-    padding-bottom: 28px;
+    padding-bottom: 27px;
   }
 }
